Wrote some tests for sonarqube